src/theme/sass-partials/_typography.scss
.heavy-font-family {
  font-family: "Roboto";
  font-weight: 900;
}

.semibold-font-family {
  font-family: "Roboto";
  font-weight: 500;
}

.regular-font-family {
  font-family: "Roboto";
  font-weight: 400;
};

h1 {
  @extend .heavy-font-family;
  font-size: 40px;
}

h2 {
  @extend .heavy-font-family;
  font-size: 28px;
}

h3 {
  @extend .semibold-font-family;
  font-size: 20px;
}

h4 {
  @extend .heavy-font-family;
  font-size: 24px;
}

a {
  @extend .semibold-font-family;
  font-size: 20px;
}

a:hover {
  @extend .semibold-font-family;
  font-size: 20px;
}

label {
  @extend .semibold-font-family;
  font-size: 20px;
}

.mes-data {
  @extend .regular-font-family;
  font-size: 20px;
}

p {
  @extend .regular-font-family;
  font-size: 20px;
}

// Override some ionic defaults. There will be more to follow
.card-ios h1 {
  @extend h1;
}
.card-ios h2 {
  @extend h2;
}
.card-ios h3 {
  @extend h3;
}
.card-ios h4 {
  @extend h4;
}
.card-ios h5 {
  @extend h5;
}
.card-ios h6 {
  @extend h6;
}

